# langchain_agent_playground

./: .gitignore  README.md  pyproject.toml
examples/: aws_lambda.py
terraform/: lambda.tf
terraform/lambda_func/: say_hello_lambda.py
